# flake8-docstrings

./: .gitignore  flake8_docstrings.py  pyproject.toml  requirements_dev.txt  setup.cfg.old
tests/: test_flake8_docstrings.py
